--- a/app/src/main/res/layout/panda_express_a_la_carte.xml
+++ b/app/src/main/res/layout/panda_express_a_la_carte.xml
@@ -24,7 +24,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_gravity="center"
@@ -44,7 +43,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -60,7 +58,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -76,7 +73,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -92,7 +88,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -108,7 +103,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -124,7 +118,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -140,7 +133,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -156,7 +148,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -172,7 +163,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -188,7 +178,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -204,7 +193,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -220,7 +208,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -236,7 +223,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -257,7 +243,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -274,7 +259,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -290,7 +274,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -306,7 +289,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -322,7 +304,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -361,3 +342,4 @@
         </LinearLayout>
 
     </LinearLayout>
+</ScrollView>
