--- a/app/src/main/res/layout/panda_express_appetizers_and_more.xml
+++ b/app/src/main/res/layout/panda_express_appetizers_and_more.xml
@@ -24,7 +24,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_gravity="center"
@@ -51,7 +50,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -68,7 +66,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -85,7 +82,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -120,3 +116,4 @@
         </LinearLayout>
 
     </LinearLayout>
+</ScrollView>
