--- a/app/src/main/res/layout/panda_express_drinks.xml
+++ b/app/src/main/res/layout/panda_express_drinks.xml
@@ -23,7 +23,6 @@
             android:orientation="horizontal" />
 
         <ImageView
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_gravity="center"
@@ -43,7 +42,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -59,7 +57,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -75,7 +72,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -91,7 +87,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -107,7 +102,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -123,7 +117,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -139,7 +132,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -155,7 +147,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -171,7 +162,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -187,7 +177,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -203,7 +192,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -219,7 +207,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -236,7 +223,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -253,7 +239,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -270,7 +255,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -286,7 +270,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -318,3 +301,4 @@
         </LinearLayout>
 
     </LinearLayout>
+</ScrollView>
