--- a/app/src/main/res/layout/panda_express_plate.xml
+++ b/app/src/main/res/layout/panda_express_plate.xml
@@ -24,7 +24,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_gravity="center"
@@ -83,7 +82,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -100,7 +98,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -116,7 +113,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -132,7 +128,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -148,7 +143,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -208,7 +202,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -224,7 +217,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -240,7 +232,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -256,7 +247,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -272,7 +262,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -288,7 +277,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -304,7 +292,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -320,7 +307,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -336,7 +322,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -352,7 +337,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -368,7 +352,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -384,7 +367,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -400,7 +382,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -436,3 +417,4 @@
         </LinearLayout>
 
     </LinearLayout>
+</ScrollView>
