--- a/app/src/main/res/layout/panda_express_plate_bundle.xml
+++ b/app/src/main/res/layout/panda_express_plate_bundle.xml
@@ -24,7 +24,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="120dp"
             android:layout_gravity="center"
@@ -83,7 +82,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -99,7 +97,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -115,7 +112,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -131,7 +127,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -147,7 +142,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -207,7 +201,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -223,7 +216,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -239,7 +231,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -255,7 +246,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -271,7 +261,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -287,7 +276,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -303,7 +291,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -319,7 +306,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -335,7 +321,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -351,7 +336,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -367,7 +351,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -383,7 +366,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -399,7 +381,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -458,7 +439,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -474,7 +454,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -490,7 +469,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -551,7 +529,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -567,7 +544,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -583,7 +559,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -599,7 +574,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -615,7 +589,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -631,7 +604,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -647,7 +619,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -663,7 +634,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -679,7 +649,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -695,7 +664,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -711,7 +679,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -727,7 +694,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -743,7 +709,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="400dp"
             android:layout_gravity="center"
@@ -760,7 +725,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -776,7 +740,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -793,7 +756,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -809,7 +771,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -825,7 +786,6 @@
             android:orientation="horizontal" />
 
         <ImageButton
-            android:id="@+id/imageView"
             android:layout_width="match_parent"
             android:layout_height="373dp"
             android:layout_gravity="center"
@@ -862,4 +822,4 @@
 
 
     </LinearLayout>
-
+</ScrollView>
